# MonEngine

./: .gitattributes  .gitignore  .gitmodules  BuildGame.bat  CMakeLists.txt  README.txt  dev.lnk  vcpkg.json
DogeApp/: CMakeLists.txt
DogeApp/Data/Assets/Objects/: dogeoffice.gltf
DogeApp/Data/Entities/: doge.json  dogeOffice.json  interactBounds.json
DogeApp/Data/Levels/: app.json
DogeApp/Data/Maps/: office_map.json
DogeApp/Data/Models/: doge_new.gltf
DogeApp/Data/Prefabs/: doge.json  dogeOffice.json
DogeApp/Source/: App.cpp  App.h  imgui.ini
DogeApp/Source/Entity/Components/: InteractComponent.h
DogeApp/Source/Entity/Descriptions/: InteractDescription.h  OverlayDescription.h
DogeApp/Source/Entity/Systems/: InteractSystem.cpp  InteractSystem.h  OverlaySystem.h
Engine/: CMakeLists.txt  ExampleUsage.cmake  MonEngineConfig.cmake.in
Engine/Data/Shaders/: debug.frag  debug.vert  gui.frag  gui.vert  mesh.frag  mesh.vert  overlay.frag  overlay.vert  sprite.frag  sprite.vert  volume.frag  volume.vert
Engine/Lib/glad/src/: glad.c
Engine/Source/Core/: Camera.cpp  Camera.h  ConfigManager.cpp  ConfigManager.h  Defines.h  EngineContext.cpp  EngineContext.h  EventListener.cpp  EventListener.h  FileSystem.h  GameInterface.h  ISystem.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SystemManager.h  Timer.h  World.cpp  World.h
Engine/Source/Editor/: EditorGUI.cpp  EditorGUI.h  MapEditor.cpp  MapEditor.h  MapInteractionSystem.cpp  MapInteractionSystem.h  ObjectGUI.cpp  ObjectGUI.h
Engine/Source/Editor/ContextMenus/: EntityMenu.cpp  EntityMenu.h  TransformMenu.h
Engine/Source/Entity/: Entity.h  EntityRegistry.cpp  EntityRegistry.h  EntityTemplateRegistry.cpp  EntityTemplateRegistry.h  GameObject.h  PrefabRegistry.cpp  PrefabRegistry.h
Engine/Source/Entity/Components/: AnimationComponent.h  CollisionComponent.h  LightComponent.h  MapComponent.h  MeshComponent.h  ModelComponent.h  PhysicsComponent.h  PlayerComponent.h  ScriptComponent.h  SpriteComponent.h  TransformComponent.h  TriggerVolumeComponent.h
Engine/Source/Entity/Descriptions/: AnimationDescription.cpp  AnimationDescription.h  CollisionDescription.cpp  CollisionDescription.h  DescriptionBase.h  DescriptionFactory.h  LightDescription.cpp  LightDescription.h  MeshDescription.cpp  MeshDescription.h  ModelDescription.cpp  ModelDescription.h  PhysicsDescription.cpp  PhysicsDescription.h  PlayerDescription.cpp  PlayerDescription.h  ScriptDescription.cpp  ScriptDescription.h  SpriteDescription.cpp  SpriteDescription.h  TransformDescription.cpp  TransformDescription.h  TriggerVolumeDescription.cpp  TriggerVolumeDescription.h
Engine/Source/GUI/: EditorGUI.cpp  EditorGUI.h  GUIBase.h  GUIButton.h  GUIElement.h  GUIMenu.cpp  GUIMenu.h  GUIMenuBar.h  GUIMenuBarItem.h  GUIMenuBase.h  GUIMenuItems.h  GUISystem.cpp  GUISystem.h  GUITheme.h  MapEditor.cpp  MapEditor.h
Engine/Source/Graphics/: GUIPipeline.cpp  GUIPipeline.h  MapPipeline.cpp  MapPipeline.h  MeshPipeline.cpp  MeshPipeline.h  RenderContext.cpp  RenderContext.h  RenderSystem.cpp  RenderSystem.h  SpritePipeline.cpp  SpritePipeline.h  TextPipeline.cpp  TextPipeline.h  Texture.cpp  Texture.h  WindowContext.cpp  WindowContext.h
Engine/Source/Graphics/Animation/: AnimController.cpp  AnimController.h  Animation.h  Animator.cpp  Animator.h
Engine/Source/Graphics/Core/: Animation.h  Animator.cpp  Animator.h  Bone.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  TerrainMesh.cpp  TerrainMesh.h  Texture.cpp  Texture.h  Vertex.h
Engine/Source/Graphics/Pipelines/: DebugPipeline.cpp  DebugPipeline.h  ImmediatePipeline.cpp  ImmediatePipeline.h  MapPipeline.cpp  MapPipeline.h  MeshPipeline.cpp  MeshPipeline.h  OverlayPipeline.cpp  (+9 more)
Engine/Source/Input/: InputContext.cpp  InputContext.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h
Engine/Source/Map/: Map.cpp  Map.h  MapAttributes.cpp  MapAttributes.h  MapDescription.cpp  MapInteractionSystem.cpp  MapInteractionSystem.h  MapRegistry.cpp  MapRegistry.h  MapSystem.cpp  MapSystem.h
Engine/Source/Physics/: CollisionSystem.cpp  CollisionSystem.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  PhysicsInterface.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBodyBase.h
Engine/Source/Script/: LuaBindable.cpp  LuaBindable.h  LuaContext.cpp  LuaContext.h  LuaSystem.cpp  LuaSystem.h  LuaValue.h
Engine/Source/Scripting/: LuaContext.cpp  LuaSystem.cpp  LuaSystem.h
Engine/Source/Terrain/: TerrainSystem.cpp  TerrainSystem.h
Engine/Source/UI/: UISystem.cpp  UISystem.h
Engine/Source/Util/: AssimpGLM.h  FileSystem.h  Logger.h  LuaUtil.h  SerialUtil.h  gltfHelpers.h
Game/: CMakeLists.txt  imgui.ini
Game/Data/: config.json
Game/Data/Animations/: doge_anims.json
Game/Data/Entities/: directionalLight.json  player.json  pointLight.json  pointLightRed.json  test.json
Game/Data/Levels/: editor.json  game.json  level0.json  menu.json
Game/Data/Maps/: ground_map.json  tiles_map.json
Game/Data/Models/: Idle.fbx  PlainBox.gltf  Plane.gltf  dogeTerrain.gltf  dogemage.fbx  dogemage_fixed.gltf  dogemage_noIK.gltf  wormTest.gltf
Game/Data/Prefabs/: directionalLight.json  npc.json  player.json  pointLightRed.json  terrain.json
Game/Data/Scripts/: mainMenu.lua  npc.lua  script.lua
Game/Data/Shaders/: debug.vert  gui.frag  gui.vert  sprite.frag  volume.vert
Game/Source/: App.h  Game.cpp  Game.h  imgui.ini
Game/Source/GUI/: GameGUI.cpp  GameGUI.h
Sandbox/: CMakeLists.txt
Sandbox/Data/Entities/: player.json  pointLightRed.json  test.json
Sandbox/Data/Levels/: editor.json  game.json  menu.json
Sandbox/Data/Maps/: ground_map.json  ground_map.txt
Sandbox/Data/Models/: doge_new.gltf  mini_doge.gltf
Sandbox/Data/Prefabs/: directionalLight.json  player.json  pointLight.json  pointLightRed.json  test.json
Sandbox/Data/Scripts/: mainMenu.lua  startGame.lua
Sandbox/Source/: Sandbox.cpp  Sandbox.h  imgui.ini
(+212 files in other folders)
